can add to hobbies from client

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body ng-app="myApp">
 
   <header>
-    <button class="nav-button" ui-sref="/">go to home</button>
-    <button class="nav-button" ui-sref="me">go to me</button>
-    <button class="nav-button" ui-sref="skills">go to skills</button>
+    <button ng-click="" class="nav-button" ui-sref="/">go to home</button>
+    <button ng-click="" class="nav-button" ui-sref="me">go to me</button>
+    <button ng-click="" class="nav-button" ui-sref="skills">go to skills</button>
     <h1>myAPI</h1>
   </header>
 
